# MedicineAI

./: .dockerignore  .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
dockerfiles/: Dockerfile.backend  Dockerfile.frontend
patients_db/: contact_dermatitis_rash.json  cough_acute_respiratory.json  example_case.json  gastroenteritis_acute.json  headache_tension_like.json  low_back_strain.json
src/frontend/: MedicineAI.py  __init__.py  app.py
src/frontend/pages/: About.py  ICD_11.py
src/medicineai/: __init__.py  cli.py  icd11_client.py  llm_config.py  orchestrator.py  schemas.py  state.py
src/medicineai/agents/: __init__.py  diagnosis.py  symptom.py  treatment.py  verification.py
src/medicineai/api/: __init__.py  main.py
