[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "medicineai"
version = "0.1.0"
description = "CLI multi-agent clinical decision-support prototype (LangChain + OpenAI + ICD-11 API)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-openai>=0.2,<0.4",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "streamlit>=1.40",
]

[project.scripts]
medicineai = "medicineai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["medicineai*"]
